<resources>
    <string name="app_name">Chen2267127</string>
    <string name="or_sign_in_with">Or Sign in with</string>

    <string name="password">password</string>
    <string name="email">email</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="setting">Setting</string>
    <string name="log_out">Log out</string>
    <string name="home">Home</string>
    <string name="contact_taskmanager_com">contact@taskmanager.com</string>
    <string name="task_manager">Task manager</string>
    <string name="profile">Profile</string>
    <string name="new_user_click_here">New user? Click here</string>
    <string name="loginme">LoginMe</string>
    <string name="n_a">N/A</string>
    <string name="welcome">Welcome</string>
    <string name="upcoming_task">Upcoming Task:</string>
    <string name="total_number_of_tasks">Total number of tasks:</string>
    <string name="edit_icon">Edit Icon</string>
    <string name="title">Title</string>
    <string name="category">Category</string>
    <string name="create_new_task">Create New Task</string>
    <string name="update_task">Update Task</string>
    <string name="search">Search</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="john_doe_example_com">john.doe@example.com</string>
    <string name="john_doe">John Doe</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="address">Address</string>
    <string name="notes">Notes</string>
    <string name="task_detail">Task Detail</string>
    <string name="mobile_application_design">Mobile Application Design</string>
    <string name="final_project">Final Project</string>
    <string name="present">Present</string>
    <string-array name="spinner_items">
        <item>All</item>
        <item>Sports</item>
        <item>Family</item>
        <item>Work</item>
    </string-array>
</resources>