<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new_task"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginVertical="20dp"/>

    <EditText
        android:id="@+id/taskFormTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title" />

    <EditText
        android:id="@+id/taskFormCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/category"
        android:layout_marginTop="8dp" />

    <EditText
        android:id="@+id/taskFormAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Address"
        android:layout_marginTop="8dp" />
    <EditText
        android:id="@+id/taskFormNotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Notes"
        android:layout_marginTop="8dp" />


</LinearLayout>