<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    android:background="@drawable/blue">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_task"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginVertical="20dp"/>

    <EditText
        android:id="@+id/updateTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title" />

    <EditText
        android:id="@+id/updateCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/category"
        android:layout_marginTop="8dp" />

    <EditText
        android:id="@+id/updateAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="address"
        android:layout_marginTop="8dp" />
    <EditText
        android:id="@+id/updateNotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="notes"
        android:layout_marginTop="8dp" />

</LinearLayout>