<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/drawer_border"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="176dp"
        android:background="@drawable/header_background"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:gravity="bottom"
        android:orientation="vertical"
        android:padding="16dp"
        >

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/redcar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_manager"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/contact_taskmanager_com"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/baseline_home_25"
            android:drawablePadding="8dp"
            android:text="@string/home"
            android:textColor="@color/lavender"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/baseline_settings_24"
            android:drawablePadding="8dp"
            android:text="@string/profile"
            android:textColor="@color/lavender"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/exitApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/baseline_exit_to_app_24"
            android:drawablePadding="8dp"
            android:text="@string/log_out"
            android:textColor="@color/lavender"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>